[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-httpdbg"
authors = [
    {name = "cle-b", email = "cle@tictac.pm"},
]
description="A pytest plugin to record HTTP(S) requests with stack trace"
readme="README.md"
requires-python = ">=3.9.0"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest"
]
dynamic = ["version"]
dependencies = [
  "httpdbg>=0.29.0",
  "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["pytest_httpdbg"]

[tool.setuptools.dynamic]
version = {attr = "pytest_httpdbg.__version__"}

[project.urls]
Source = "https://github.com/cle-b/pytest-httpdbg/"
Documentation = "https://httpdbg.readthedocs.io/"
